--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "license": "MIT",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  }, 
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
